--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "https://spmingalyov.github.io/react-client-auth/",
 	"name": "test-app",
 	"version": "0.1.0",
 	"private": true,
@@ -13,6 +14,7 @@
 		"@types/react": "^18.2.25",
 		"@types/react-dom": "^18.2.10",
 		"compose-function": "^3.0.3",
+		"gh-pages": "^6.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
@@ -25,7 +27,9 @@
 	},
 	"scripts": {
 		"dev": "craco start",
-		"build": "react-scripts build",
+		"build": "craco build",
+		"predeploy": "yarn build",
+		"deploy": "gh-pages -d build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
