--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@types/react": "^18.2.25",
 		"@types/react-dom": "^18.2.10",
 		"compose-function": "^3.0.3",
+		"dotenv": "^16.3.1",
 		"gh-pages": "^6.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
